fixed layout issues and added responsiveness

--- a/client/src/components/LoginComponent/Login.css
+++ b/client/src/components/LoginComponent/Login.css
@@ -15,6 +15,11 @@
   margin: 10px;
  }
 
+ .userDetailsContainer form {
+  display: flex;
+  flex-direction: column;
+ }
+
 .loginButton, .registerButton {
   margin: 20px;
   border: 1px solid #f2e718;
